# Giga5

./: .replit  app.py  gigachat_model.py  kandinsky_service.py  pyproject.toml  replit.md  search_service.py
attached_assets/: Pasted-2025-08-08-16-38-13-0000-6661-INFO-Booting-worker-with-pid-6661-INFO-root--1754671112447_1754671112448.txt
static/css/: style.css
static/js/: chat.js
templates/: chat.html
