[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "AI Chat application with ruGPT3Small model"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "sentencepiece>=0.1.97",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "trafilatura>=2.0.0",
    "duckduckgo-search>=8.1.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
